aggiunto stile-html

--- a/Palindromo/Index.html
+++ b/Palindromo/Index.html
@@ -10,9 +10,10 @@
 <body>
     <div class="container p-3 text-center">
       <h1>Inserisci la parola per vedere se è palindroma</h1>
-      <div class="py-5">
-        <input type="text" id="Palindromo">
-        <button>invia</button>
+        <div class="input-group mb-3 py-5">
+            <input type="text" class="form-control" placeholder="Es: Anna" aria-label="Username" aria-describedby="basic-addon1">
+            <button type="button" class="btn btn-primary">Invia</button>
+        
       </div>
         
     </div>
