--- a/Pari e Dispari/index.html
+++ b/Pari e Dispari/index.html
@@ -6,6 +6,6 @@
     <title>Pari e Dispari</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="/Pari e Dispari/script.js"></script>
 </body>
 </html>
